added type statistics