@@ -253,6 +253,14 @@
                             </jvmArgs>
                         </launcher>
                         <launcher>
+                            <id>TypeStatistics</id>
+                            <mainClass>org.dbpedia.extraction.statistics.TypeStatistics</mainClass>
+                            <jvmArgs>
+                                <jvmArg>-server</jvmArg>
+                                <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
+                            </jvmArgs>
+                        </launcher>
+                        <launcher>
                             <id>GenerateDataIds</id>
                             <mainClass>org.dbpedia.extraction.scripts.DataIdGenerator</mainClass>
                             <jvmArgs>
